--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
 
   <body>
     <!-- Navbar -->
-    <!-- TODO: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
     <nav class="top">
       <div class="bar blue card left-align large">
         <a
@@ -22,16 +21,17 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <div class="hide-small">
+          <a href="#header" id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
+          <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
+          <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        </div>
       </div>
 
       <!-- Navbar on small screens -->
       <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
-        <a id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
+        <a href="#challenges" id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
+        <a href="#signup" id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
       </div>
     </nav>
 
