--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
           ><i class="fa fa-bars"></i>
         </a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" href="index.html" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" href="#challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" href="#signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a id="nav-logo" href="index.html" class="bar-item button hide-small padding-large white">JobSimulator.Dev</a>
+        <a id="nav-challenges" href="#challenges" class="bar-item hide-small button padding-large hover-white">Browse Challenges</a>
+        <a id="nav-signup" href="#signup" class="bar-item button hide-small padding-large hover-white">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
