--- a/src/index.html
+++ b/src/index.html
@@ -23,15 +23,18 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a id="nav-logo" class="bar-item button padding-large white" href="#header">JobSimulator.Dev</a>
+
+        <div id="desktop-nav" class="hide-small">
+          <a id="nav-challenges" class="bar-item button padding-large hover-white" href="#challenges">Browse Challenges</a>
+          <a id="nav-signup" class="bar-item button padding-large hover-white" href="#signup">Sign Up</a>
+        </div>
       </div>
 
       <!-- Navbar on small screens -->
       <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
-        <a id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
+        <a id="mobile-nav-challenges" class="bar-item button padding-large" href="#challenges">Browse Challenges</a>
+        <a id="mobile-nav-signup" class="bar-item button padding-large" href="#signup">Sign Up</a>
       </div>
     </nav>
 
