--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
     <!-- Navbar -->
     <!-- TODO: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
     <nav class="top">
-      <div class="bar blue card left-align large">
+      <div class="bar blue card left-align large ">
         <a
-          class="bar-item button hide-medium hide-large right padding-large hover-white large blue"
+          class="bar-item button hide-large right padding-large hover-white large blue"
           href="javascript:void(0);"
           id="hamburger-button"
           onclick="toggleNav()"
@@ -24,12 +24,12 @@
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
         <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hide hide-small hover-white">Browse Challenges</a>
+        <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white hide hide-small">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
-      <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
+      <div id="mobile-nav" class="bar-block white hide hide-large large">
         <a href="#challenges" id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
         <a href="#signup" id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
       </div>
