--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
+        <!-- Navbar on medium and large screens -->
         <a id="nav-logo" href="#header" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" href="#challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" href="#signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a id="nav-challenges" href="#challenges" class="bar-item button padding-large hover-white hide-small">Browse Challenges</a>
+        <a id="nav-signup" href="#signup" class="bar-item button padding-large hover-white hide-small">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
